começando java script

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main>
+    <div classe = "caixa-principa">
+        <h1   classe="titulo"> Isso é um titulo </h1>
+        <div  classe="caixa-perguntas"></div>
+        <div> classe="caixas alternativas"></div>
+        <div> classe="resultado">
+              <p classe="texto-resultado"></p>
+
     <script src="main.js"></script>
 </body>
 </html>
