--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Voce decide</title>
-    <link rel="stylesheet" href="style.css">
+    
+    <script src="Js variaveis.js"></script>
+    <title>Base JavaScript</title>
 </head>
 <body>
-    <main>
-    <div classe = "caixa-principa">
-        <h1   classe="titulo"> Isso é um titulo </h1>
-        <div  classe="caixa-perguntas"></div>
-        <div> classe="caixas alternativas"></div>
-        <div> classe="resultado">
-              <p classe="texto-resultado"></p>
-
-    <script src="main.js"></script>
+    
 </body>
 </html>
